Twitter募集タイトルのメッセージをi18nに移動

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -38,6 +38,7 @@ ja:
   talk:
     error: "よく分かりません"
   twitter:
+    title: "イーズ募集通知"
     participants: "参加者"
     close: "この募集は終了しました。"
   weapon:
