--- a/config/locales/food_porn.yml
+++ b/config/locales/food_porn.yml
@@ -1,7 +1,10 @@
+---
 ja:
   food_porn:
-    error: "画像検索上限のため結果を表示できません。明日以降に試して下さい。"
     base_word: 飯テロ
+    error: 画像検索上限のため結果を表示できません。明日以降に試して下さい。
+    rare_word:
+    - 白いお皿
     words:
     - 焼き鳥
     - ラーメン
@@ -25,5 +28,3 @@ ja:
     - 中華料理
     - カレーライス
     - 焼肉
-    rare_word:
-    - 白いお皿
