--- a/config/locales/nickname.yml
+++ b/config/locales/nickname.yml
@@ -1,5 +1,13 @@
+---
 ja:
   nickname:
+    decorations:
+    - "☆"
+    - "†"
+    - 卍
+    - "♪"
+    - "❤"
+    - "\U0001F4AA"
     display: "%{name}よ…今日からお前は「%{nick}」だ！"
     prefixes:
     - アルティメット
@@ -198,9 +206,9 @@ ja:
     - と愉快な仲間達
     - Z
     - ぽん
-    - ・ザ・キッド
-    - ・ザ・ハーデス
-    - ・ザ・ゴッド
+    - "・ザ・キッド"
+    - "・ザ・ハーデス"
+    - "・ザ・ゴッド"
     - ゾネス
     - 神殿
     - ビル
@@ -222,15 +230,15 @@ ja:
     - ブラザーズ
     - 親方
     - 横綱
-    - (18歳)
-    - (3歳)
+    - "(18歳)"
+    - "(3歳)"
     - ッティ
     - 3世
     - バスターズ
     - か…いい奴だったよ
     - って誰だっけ？
     - は静かに暮らしたい
-    - ～そして伝説へ…～
+    - "～そして伝説へ…～"
     - 博士
     - モン
     - 銀行
@@ -258,10 +266,3 @@ ja:
     - ブリーダー
     - は星になったのサ…
     - ならあっちに行ったぜ
-    decorations:
-    - ☆
-    - †
-    - 卍
-    - ♪
-    - ❤
-    - 💪
