--- a/config/locales/weapon.yml
+++ b/config/locales/weapon.yml
@@ -1,12 +1,13 @@
+---
 ja:
   weapon:
     display: "%{name}さんの今日のオススメブキは【**%{weapon}**】でし！"
     weapons:
     - スプラシューターコラボ
-    - .52ガロン
+    - ".52ガロン"
     - わかばシューター
     - オクタシューターレプリカ
-    - .96ガロンデコ
+    - ".96ガロンデコ"
     - シャープマーカー
     - N-ZAP89
     - N-ZAP85
@@ -16,13 +17,13 @@ ja:
     - ボールドマーカーネオ
     - プロモデラーRG
     - スプラシューター
-    - .52ガロンデコ
+    - ".52ガロンデコ"
     - L3リールガンD
     - ジェットスイーパーカスタム
     - プライムシューターコラボ
     - もみじシューター
     - プロモデラーMG
-    - .96ガロン
+    - ".96ガロン"
     - ヒーローシューターレプリカ
     - L3リールガン
     - ジェットスイーパー
@@ -33,7 +34,7 @@ ja:
     - スプラシューターベッチュー
     - プライムシューターベッチュー
     - おちばシューター
-    - .52ガロンベッチュー
+    - ".52ガロンベッチュー"
     - L3リールガンベッチュー
     - デュアルスイーパー
     - デュアルスイーパーカスタム
