--- a/config/locales/lucky_color.yml
+++ b/config/locales/lucky_color.yml
@@ -1,7 +1,21 @@
+---
 ja:
   lucky_color:
-    error: "画像検索上限のため結果を表示できません。明日以降に試して下さい。"
+    color:
+    - 黒 black
+    - 青 blue
+    - 茶 brown
+    - 灰 gray
+    - 緑 green
+    - 橙 orange
+    - 桃 pink
+    - 紫 purple
+    - 赤 red
+    - 青緑 teal
+    - 白 white
+    - 黄 yellow
     display: "%{name}さんの今日のラッキーカラーは「%{color}」です。ラッキーアイテムはこちら！"
+    error: 画像検索上限のため結果を表示できません。明日以降に試して下さい。
     words:
     - イラスト
     - 花
@@ -50,16 +64,3 @@ ja:
     - 座布団
     - 靴
     - 服
-    color:
-    - 黒 black
-    - 青 blue
-    - 茶 brown
-    - 灰 gray
-    - 緑 green
-    - 橙 orange
-    - 桃 pink
-    - 紫 purple
-    - 赤 red
-    - 青緑 teal
-    - 白 white
-    - 黄 yellow
