--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -55,6 +55,9 @@ ja:
     cancel: "%{name}さんが [%{label_id}] の参加をキャンセルしました。"
     close: "%{name}さんが [%{label_id}] を終了しました。"
     error_two_numbers: 数字が2つ以上入っているので分かりませんでした(´・ω・｀)ｼｮﾎﾞｰﾝ
+    information:
+      base: "[%{label_id}] %{content} %{author_name} %{reserved}/%{capacity}"
+      participants: "    参加者: %{participants}"
     join: "%{name}さんが [%{label_id}] に参加しました"
     not_found: 募集はありません
     one_time_close: "[%{label_id}] を終了しました。"
