WeatherActionのリファクタリング

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -84,11 +84,11 @@ ja:
     display: "%{name}さんの今日のオススメブキは【**%{weapon}**】でし！"
   weather:
     display: の天気
-    title:
-      humidity: 湿度：%{humidity}%
-      pressure: 気圧：%{pressure}hPa
-      speed: 風速：%{speed} m/s
-      sunrise: 日の出：%{sunrise}
-      sunset: 日の入：%{sunset}
-      temp: 気温：%{temp}度 (%{temp_min}度～%{temp_max}度)
-      weather: 天気：%{weather}
+    format: |
+      湿度：%{humidity}%
+      気圧：%{pressure}hPa
+      風速：%{speed} m/s
+      日の出：%{sunrise}
+      日の入：%{sunset}
+      気温：%{temp}度 (%{temp_min}度～%{temp_max}度)
+      天気：%{weather}
