宝くじの当選確率を大幅アップ

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -51,27 +51,23 @@ ja:
     rank1: |
       %{name}さん…心して聞いて下さい。
       なんと1等が当たりました！
-      当選確率は600万分の1です！
-      もし本当に当たっていたら当選金額は2億円ですよ！
+      実際の宝くじなら当選金額は2億円ですよ！
       今すぐ宝くじを買いに行ったほうがいいかもしれません！
     rank2: |
       %{name}さん…すごい！
       なんと2等の当選です！
-      当選確率は約100万分の1ですよ！
-      もし本当に当たっていたら当選金額は1000万円ですよ！
+      実際の宝くじなら当選金額は1000万円ですよ！
     rank3: |
       %{name}さん、おめでとうございます！
       なんと3等が当たりました！
-      当選確率は約3万分の1ですよ！
-      もし本当に当たっていたら当選金額は30万円ですよ！
+      実際の宝くじなら当選金額は30万円ですよ！
     rank4: |
       %{name}さん、やったね！
-      当選確率は約600分の1ですよ～！
-      もし本当に当たっていたら当選金額は6800円ですよ！
+      4等が当たりました！
+      実際の宝くじなら当選金額は6800円ですよ！
     rank5: |
       %{name}さん、5等が当たりました！
-      当選確率は約40分の1です。
-      当たっていたら当選金額は1000円です！
+      実際の宝くじなら当選金額は1000円です！
   lucky_color:
     display: "%{name}さんの今日のラッキーカラーは「%{color}」です。ラッキーアイテムはこちら！"
     error: 画像検索上限のため結果を表示できません。明日以降に試して下さい。
